[package]
name = "rusqlite-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.11.0"
oneshot = "0.1.6"
rusqlite = { version = "0.29.0" }
sea-query = { version = "0.30.1", default-features = false }
thiserror = "1.0.48"
tracing = "0.1.37"
[features]
default = ["test"]
test = ["functions", "window", "bundled-full"]

array = ["rusqlite/array"]
backup = ["rusqlite/backup"]
blob = ["rusqlite/blob"]
buildtime_bindgen = ["rusqlite/buildtime_bindgen"]
bundled = ["rusqlite/bundled"]
bundled-full = ["rusqlite/bundled-full"]
bundled-sqlcipher = ["rusqlite/bundled-sqlcipher"]
bundled-sqlcipher-vendored-openssl = ["rusqlite/bundled-sqlcipher-vendored-openssl"]
bundled-windows = ["rusqlite/bundled-windows"]
chrono = ["rusqlite/chrono"]
collation = ["rusqlite/collation"]
column_decltype = ["rusqlite/column_decltype"]
csv = ["rusqlite/csv"]
csvtab = ["rusqlite/csvtab"]
extra_check = ["rusqlite/extra_check"]
functions = ["rusqlite/functions"]
hooks = ["rusqlite/hooks"]
i128_blob = ["rusqlite/i128_blob"]
in_gecko = ["rusqlite/in_gecko"]
limits = ["rusqlite/limits"]
load_extension = ["rusqlite/load_extension"]
modern-full = ["rusqlite/modern-full"]
modern_sqlite = ["rusqlite/modern_sqlite"]
release_memory = ["rusqlite/release_memory"]
serde_json = ["rusqlite/serde_json"]
series = ["rusqlite/series"]
session = ["rusqlite/session"]
sqlcipher = ["rusqlite/sqlcipher"]
time = ["rusqlite/time"]
trace = ["rusqlite/trace"]
unlock_notify = ["rusqlite/unlock_notify"]
url = ["rusqlite/url"]
uuid = ["rusqlite/uuid"]
vtab = ["rusqlite/vtab"]
wasm32-wasi-vfs = ["rusqlite/wasm32-wasi-vfs"]
window = ["rusqlite/window"]
winsqlite3 = ["rusqlite/winsqlite3"]
with-asan = ["rusqlite/with-asan"]
